--- a/devops-core/pom.xml
+++ b/devops-core/pom.xml
@@ -103,6 +103,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.hfwas.devops</groupId>
