--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -24,7 +24,7 @@
         <redisson.version>3.41.0</redisson.version>
         <mybatis.version>3.5.17</mybatis.version>
         <mybatis-spring.version>3.0.3</mybatis-spring.version>
-        <mysql.version>8.0.28</mysql.version>
+        <mysql.version>8.3.0</mysql.version>
         <snakeyaml.version>2.2</snakeyaml.version>
         <easyexcel.version>4.0.3</easyexcel.version>
         <jsoup.version>1.18.3</jsoup.version>
@@ -105,8 +105,8 @@
                 <version>${spring-tx.version}</version>
             </dependency>
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql.version}</version>
                 <exclusions>
                     <exclusion>
