--- a/devops-base/pom.xml
+++ b/devops-base/pom.xml
@@ -84,6 +84,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-autoconfigure</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-crypto</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
