--- a/devops-dependencies/pom.xml
+++ b/devops-dependencies/pom.xml
@@ -193,6 +193,14 @@
                         <groupId>io.netty</groupId>
                         <artifactId>netty-handler</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>io.netty</groupId>
+                        <artifactId>netty-common</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>io.netty</groupId>
+                        <artifactId>netty-transport</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
